nova_tests/negative_capability/p53_let_array_pattern.nv
// EXPECT_COMPILE_ERROR refutable pattern в `let`
//
// Plan 53: array-patterns refutable — длина не гарантирована. Для
// извлечения элементов — `xs[i]` или `if let` / `match`.

module negative_capability.p53_let_array_pattern

test "array pattern in let — refutable" {
    let xs = [1, 2, 3]
    let [a, b, c] = xs
    assert(a == 1)
    assert(b == 2)
    assert(c == 3)
}
